# TheBudget

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SPENDING_TRACKER_PRODUCT_PLAN.md
apps/api/: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_migration_baseline.py  0002_profile_account_models.py  0003_category_models.py  0004_transaction_models.py  0005_transaction_transfer_type.py  0006_import_persistence.py  0007_budget_models.py  0008_recurring_series.py  0009_income_schedules.py  0010_merchant_rules.py  0011_refunds_reduce_spending.py  (+1 more)
apps/api/app/: __init__.py  config.py  main.py
apps/api/data/: .import-fingerprint.key
apps/api/tests/: test_amex_excel_parser.py  test_amex_parser.py  test_budget_api.py  test_category_api.py  test_category_services.py  test_database.py  test_dates.py  test_health.py  test_import_api.py  test_import_csv_api.py  test_import_excel_api.py  test_import_migration.py  test_import_persistence.py  test_import_schemas.py  test_import_services.py  test_importing_primitives.py  test_income_api.py  test_income_rules.py  test_merchant_rules.py  test_money.py  test_parser_resolver.py  test_profile_account_api.py  test_profile_account_migration.py  test_profile_account_models.py  test_profile_account_schemas.py  test_profile_account_services.py  test_recurring_api.py  test_recurring_rules.py  test_td_csv_parser.py  test_td_parser.py  test_transaction_api.py  test_transaction_migration.py  test_transaction_rules.py  test_transaction_services.py
(+953 files in other folders)
