[project]
name = "spending-tracker-api"
version = "0.0.1"
description = "Local-first personal spending tracker backend (Stage 0 placeholder)."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# A pragmatic starter set: pyflakes, pycodestyle, isort, pyupgrade, bugbear.
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
